subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_25.while
int f(int x) {
    int y;
    for(int i=0;i<x;i=i+1) {
      y = 0;
    }
    return y;
}